$Id: CHANGES,v 1.81 2009/06/19 07:28:06 psavola Exp $

19/06/2009	Fixes and enhancements from Michael Stapelberg.  Use
		getifaddrs() on BSD because ioctl didn't work on NetBSD 5.
		Use int instead of bool to make NetBSD 5 happy.

21/01/2009	Add a workaround for Linux in scenarios where libc is
		providing IPV6_RECV(PKTINFO|HOPLIMIT) has renumbered IPV6_PKTINFO,
		but kernel doesn't support it yet (<2.6.14).  Found out by
		Freetz (special thanks to Paul Oranje) and OpenWrt projects.
		See the source code and CVS changelog for more.

28/10/2008	Release 1.2.

14/10/2008	Accept virtually any interface name (up to 15 chars) instead of
		forcing a specific naming convention.  Patch from
		Michiel Brandenburg.

		If stale radvd.pid file exists, try to overwrite it unless
		the specified PID exists, from Fedora (Martin Nagy).

		Define _GNU_SOURCE on Linux, otherwise glibc >= 2.8
		compilation fails.

		Remove -Wconversion from default CFLAGS as it is very noisy.
		Fix some warnings, from Jim Paris.

31/03/2008	Update references to RFCs.  Give pointer to the "two hour rule".
		Decrease the default valid and preferred lifetimes from 30/1
		days to 1day/4hours, respectively.  See more info at:

		http://lists.litech.org/pipermail/radvd-devel-l/2007-October/000282.html

04/02/2008	Release 1.1.

24/01/2008	Implement privilege separation (Linux only) so that
		config_interface() works both with a user and root,
		even after HUP signal.  Work by Jim Paris.

24/01/2008      The old Linux retrans_timer proc value is given in
		USER_HZ, not in seconds.  Fix that, by Jim Paris.

21/01/2008	Fix stderr+syslog logging crash (on non-i386).  Analysis and
		patch by Jim Paris (Debian bug #409600).

01/12/2007	Require that interface is also 'RUNNING' instead of just
		'UP', except if IgnoreIfMissing is enabled.  The reason is
		that at least some recent Linux kernels do not generate
		link-local addresses before interface is running and as